# dotenvy_derive

./: Cargo.toml
.github/workflows/: ci.yml
src/: lib.rs  parse.rs
